--- a/css/styles.css
+++ b/css/styles.css
@@ -613,11 +613,9 @@ footer .centered-container {
 #aboutus-main-container {
     display: table;
     margin: 0 auto;
-    padding-top: 15px;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 20px;
     line-height: 20px;
-    height: 600px;
 }
 
 #aboutus-main-container p {
@@ -721,4 +719,12 @@ ul.breadcrumb li a:hover {
     background-color: inherit;
     color: #01447e;
     text-decoration: none;
+}
+#map-frame{
+    border: 0;
+    width: 100%;
+    height: 300px;
+    margin: 0 auto;
+    display: table;
+    padding-bottom: 20px;
 }
