--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+/**
+ * @Author: vibpositive
+ * @Date:   2017-03-18T20:40:56+00:00
+ * @Last modified by:   vibpositive
+ * @Last modified time: 2017-03-18T20:50:21+00:00
+ */
+
 html, body {
     margin: 0;
     padding: 0;
